Changed close button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <body>
     <div class="container center"><span class="click">clickMe.!</span></div>
     <div class="modal-container center">
-      <div class="modal-view center"><span class="close"></span>
+      <div class="modal-view center">
+        <div class="close-container"><span class="close"></span></div>
         <div class="login">
           <form id="login-form" class="center">
             <input type="email" placeholder="Email Address">
